fix(time) right align all departure times (#1250)

--- a/next-tavla/src/Board/scenarios/Table/components/Time/styles.module.css
+++ b/next-tavla/src/Board/scenarios/Table/components/Time/styles.module.css
@@ -4,11 +4,13 @@
 }
 
 .aimedDepartureTime {
+    text-align: right;
     font-size: 0.5625em;
     text-decoration: line-through;
 }
 
 .expectedDepartureTime {
+    text-align: right;
     font-weight: 600;
     color: var(--table-estimated-time-color);
 }
